objects/Employee__c.object
<CustomObject>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Claims__c</fullName>
        <label>Claims</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Services__c</fullName>
        <label>Member Services</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Claims</fullName>
        <active>true</active>
        <label>Claims</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network</fullName>
        <active>true</active>
        <label>Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Services</fullName>
        <active>true</active>
        <label>Member Services</label>
    </recordTypes>
</CustomObject>